[package]
name = "ppl-feature-proposal-cli"
version = "1.0.0"
description = "PPL Feature Proposal Command-line Utility"
authors = ["PUT Maintainers <maintainers@put.foundation>"]
repository = "https://github.com/put-labs/put-program-library"
license = "Apache-2.0"
edition = "2018"

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
put-clap-utils =  { path = "../../../put/clap-utils", version = "=1.1.0" }
put-cli-config =  { path = "../../../put/cli-config", version = "=1.1.0" }
put-client =  { path = "../../../put/client", version = "=1.1.0" }
put-logger =  { path = "../../../put/logger", version = "=1.1.0" }
put-sdk = { path = "../../../put/sdk", version = "=1.1.0" }
ppl-feature-proposal = { version = "1.0", path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "ppl-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
