[package]
name = "ppl-token"
version = "1.0.0"
description = "PUT Program Library Token"
authors = ["PUT Maintainers <maintainers@put.foundation>"]
repository = "https://github.com/put-labs/put-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
borsh = { version = "0.9.3", features = ["const-generics"] }
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.2"
put-program =  { path = "../../../put/sdk/program", version = "=1.1.0" }
thiserror = "1.0"

[dev-dependencies]
put-sdk = { path = "../../../put/sdk", version = "=1.1.0" } #"1.7.4"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
